slideshow no longer gets cropped at the bottom on wider screen

--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -20,5 +20,5 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    height: 650px;
+    height: 67vw;
 }
